--- a/task-b.html
+++ b/task-b.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/animate.css">
 
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
@@ -35,7 +36,7 @@
 <!-- iso kuva tänne -->
 <div id="modal" class="hidden">
     <a href="#" class="closeBtn">&#215;</a>
-    <img>
+    <img id="modalImg">
 </div>
 
 <script src="js/main-b.js"></script>
